--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ header{
 input[type="checkbox"]:checked + .checkbox-label::after{
     content: url(../images/svg/checkbox.svg);
 }
-.form input[type="text"]{
+.form input[type="text"], .form input[type="number"]{
     font-family: 'Rubik', sans-serif;
     display: block;
     background: #F6F8FC;
@@ -286,7 +286,7 @@ input[type="checkbox"]:checked + .checkbox-label::after{
     color: #30405F;
     margin-bottom: 12px;
 }
-.form input[type="text"]:active, .form input[type="text"]:focus{
+.form input[type="text"]:active, .form input[type="text"]:focus, .form input[type="number"]:active, .form input[type="number"]:focus{
     background: #FFFFFF;
     box-shadow: 0px 0px 13px rgba(193, 210, 249, 0.45);
     border-radius: 11px;
